# 3D-Viewer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Readme.md  project_setup.bash
assets/shaders/: basic.frag  basic.vert  lighting.frag  simple_color.frag
assets/textures/: simple_textures.py
include/: Camera.h  Shader.h
src/: Camera.cpp  Shader.cpp  main.cpp
